--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,7 @@ body {
 
     .welcome {
         padding-left: 10px;
+        padding-right: 10px;
     }
 
     .logo {
@@ -169,4 +170,8 @@ h3 {
     display: flex;
     flex-direction: column;
     width: 100%;
+}
+
+.visitor-counter {
+    display: none;
 }
